src/tests/snapshots/yolk__tests__yolk_tests__template_unknown_function_error_rendering.snap
---
source: src/tests/yolk_tests.rs
expression: "env.yolk().eval_template(&mut eval_ctx, \"template.conf\",\n\"before\\nvalue = {< ptint(\\\"hi\\\") >}\\nafter\\n\",).map_err(test_util::render_report).unwrap_err()"
---
  × Failed to render document `template.conf`
  ╰─▶ Failed to evaluate template

Error: 
  × Unknown function `ptint`. Did you mean `print`?
  ╰─▶   × Function not found: ptint (&str | ImmutableString | String) (line 1, position 1)
      
   ╭─[template.conf:2:13]
 1 │ before
 2 │ value = {< ptint("hi") >}
   ·             ┬
   ·             ╰── here
 3 │ after
   ╰────
  help: Similar functions: `print`
